[gd_scene load_steps=8 format=2]

[ext_resource path="res://Location/Scripts/Planet.gd" type="Script" id=1]
[ext_resource path="res://Figuras/Sprites.png" type="Texture" id=2]
[ext_resource path="res://Fonts/geompixel.ttf" type="DynamicFontData" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0384

[sub_resource type="DynamicFont" id=2]
size = 5
outline_size = 1
outline_color = Color( 0.129412, 0.129412, 0.129412, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "Show_name"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Name:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Name:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0254915, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 74.0068

[node name="Planet" type="Area2D"]
script = ExtResource( 1 )

[node name="Figura" type="Sprite" parent="."]
modulate = Color( 0.619608, 0.45098, 0, 1 )
texture = ExtResource( 2 )
vframes = 5
hframes = 5
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Position" type="Position2D" parent="."]
position = Vector2( 27, 0 )

[node name="Name" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.0160013 )
margin_left = -50.0
margin_top = -35.0
margin_right = 49.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 2 )
text = "Antaris 66437"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Show_name = SubResource( 3 )

[node name="ShowName" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShowName"]
shape = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Planet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ShowName" to="." method="_on_ShowName_body_entered"]
[connection signal="body_exited" from="ShowName" to="." method="_on_ShowName_body_exited"]
